--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 
 <head>
-	<title>Sylvia Pap</title>
+	<title>Aidan Percy</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" />
 	</noscript>
-	<link rel="icon" href="images/moon.png" />
+	<link rel="icon" href="images/icons8-bolt-64.png" />
 </head>
 
 <body class="is-preload">
@@ -18,24 +18,18 @@
 			<!-- Main Panel -->
 			<section class="panel spotlight medium left color0">
 				<div class="intro">
-					<h1 class="major">Sylvia Pap</h1>
+					<h1 class="major">Aidan Percy</h1>
 					<ul class="icons">
 						<li>
-							<a href="https://www.linkedin.com/in/sylvia-pap/" class="icon brands fa-linkedin"><span
+							<a href="https://www.linkedin.com/in/aidan-percy/" class="icon brands fa-linkedin"><span
 									class="label">LinkedIn</span></a>
 						</li>
 						<li>
-							<a href="https://github.com/sylviapap" class="icon brands fa-github"><span class="label">GitHub</span></a>
+							<a href="resources/AidanPercyResumeSep2021.pdf" class="icon solid fa-file" download><span
+									class="label">Resume</span></a>
 						</li>
 						<li>
-							<a href="https://dev.to/sylviapap" class="icon brands fab fa-dev"><span class="label">Dev</span></a>
-						</li>
-						<li>
-							<a href="https://twitter.com/sylviapapdev" class="icon brands fa-twitter"><span
-									class="label">Twitter</span></a>
-						</li>
-						<li>
-							<a href="mailto:sylviapap1@gmail.com" class="icon solid fa-envelope"><span class="label">Gmail</span></a>
+							<a href="mailto:aidan.percy@mail.utoronto.ca" class="icon solid fa-envelope"><span class="label">Email</span></a>
 						</li>
 					</ul>
 
@@ -51,142 +45,207 @@
 				<div class="inner">
 					<ul class="grid-icons four connected">
 						<li>
-							<span class="icon solid fa-globe">
-								<a href="#about">
-									<p>About</p>
+							<span class="icon solid fa-user">
+								<a href="#profile">
+									<p>Profile</p>
 								</a>
 							</span>
 						</li>
 						<li>
-							<span class="icon solid fa-code">
-								<a href="#projects">
-									<p>Projects</p>
+							<span class="icon solid fa-briefcase">
+								<a href="#experience">
+									<p>Experience</p>
 								</a>
 							</span>
 						</li>
 						<li>
-							<span class="icon solid fa-keyboard">
-								<a href="#blogs">
-									<p>Posts</p>
+							<span class="icon solid fa-calculator">
+								<a href="#investing">
+									<p>Investing</p>
 								</a>
 							</span>
 						</li>
 						<li>
-							<span class="icon solid fa-address-book">
-								<a href="#contact">
-									<p>Contact</p>
+							<span class="icon solid fa-baseball-ball">
+								<a href="#hobbies">
+									<p>Hobbies</p>
 								</a>
 							</span>
 						</li>
 					</ul>
-					<a href="#about" class="button primary color2 circle icon solid fa-angle-right center">Next</a>
+					<a href="#profile" class="button primary color2 circle icon solid fa-angle-right center">Next</a>
 				</div>
 			</section>
 
 			<!-- Panel (About) -->
-			<section class="panel color3 spotlight large left" id="about">
-				<div class="intro span-5">
-					<h2 class="major">About</h2>
-					<p>This was my first personal site, kept here for fun. Click <a href="https://sylviapap.com">here</a> for my
-						most current site :)</p>
-					<a href="#projects" class="button primary color2 circle icon solid fa-angle-right">Next</a>
+			<section class="panel color3 banner right">
+				<div class="image span-1-75" data-position="40% 30%">
+					<img src="resources/profile.jpeg" alt="" />
+				</div>	
+			</section>
+			<section class="panel color3 spotlight large left" id="profile">
+				<div class="intro span-7">
+					<h2 class="major">Profile</h2>
+					<p>I am a student at the University of Toronto pursuing a Bachelor of Commerce with a specialization in finance and economics. Prior to U of T, I attended high school in Vancouver where I was a member of the Investment Club, Varsity Rowing Team, and Discovery 10.
+						I am interested in finance and have completed several related internships in private equity and corporate development. I also spend my free time researching companies to invest in.
+					</p>
+					<p>
+						Outside of the classroom, I am a part of RCIF, a student-run investment fund, as <strong>VP Operations</strong>, Investa Insights, an equity research club, as a <strong>Junior Portfolio Manager</strong>, and RCFTA, a FinTech club as a <strong>Finance Director</strong>. In my spare time, I enjoy cycling, traveling, reading, exploring Toronto, and spending time with friends!
+					</p>
+					<a href="#experience" class="button primary color2 circle icon solid fa-angle-right">Next</a>
 				</div>
 				<div class="image" data-position="top left">
-					<img src="images/pink.jpeg" alt="" />
+					<img src="resources/beach-ocean-aerial-view-drone-view.jpeg" alt="" />
 				</div>
 			</section>
 
 			<!-- Panel - projects -->
-			<section class="panel color2 spotlight medium left" id="projects">
+			<section class="panel color2 spotlight small left" id="experience">
 				<div class="intro joined">
-					<h2 class="major">Projects</h2>
-					<ul class="grid-icons three connected">
+					<h2 class="major">Experience</h2>
+					<ul class="contact-icons" style="margin-top: -15px;">
+						<li class="experience-list">
+							<a href="#experience-1"> 	<img src="resources/bell.png" alt="" style="object-fit: cover;"> EWEE Inc. – Bell Enterprise Dealer</a>
+						</li>
+						<li class="experience-list">
+							<a href="#experience-2"> 	<img src="resources/be.png" alt="" > BE Power Equipment</a>
+						</li>
+						<li class="experience-list">
+							<a href="#experience-3"> 	<img src="resources/turtle.png" alt="" > Turtle Holdings Limited</a>
+						</li>
+						<li class="experience-list">
+							<a href="#experience-4"> 	<img src="resources/rcif.png" alt=""> Rational Capital Investment Fund</a>
+						</li>
+						<li class="experience-list">
+							<a href="#experience-5"> 	<img src="resources/royalpacificrealty.png" alt="" > Royal Pacific Realty Corporation</a>
+						</li>
+						
+					</ul>
+				</div>
+			</section>
+
+			<!-- Experience 1 -->
+			<section class="panel color1-alt" id="experience-1">
+				<div class="intro color1">
+					<h3 class="major">EWEE Inc. - Bell Canada Enterprise Partner</h3>
+					<small>2021 - Present || Corporate Development Intern</small>
+					<br/>
+					<p>I am currently working with the EWEE team to close an acquisition of a Bell enterprise dealer. I’m working on due diligence, valuation, and industry analysis to create a 45 slide investment memo to be presented to lenders.</p>
+				</div>
+			</section>
+			<!-- Experience 2 -->
+			<section class="panel color1-alt" id="experience-2">
+				<div class="intro color1">
+					<h3 class="major">BE Power Equipment</h3>
+					<small>2021 || Supply Chain Summer Intern</small>
+					<br/>
+					<p>Over the summer, I worked alongside the supply chain, inventory, and warranty team at a power equipment manufacturer.</p>
+				</div>
+			</section>
+			<!-- Experience 3 -->
+			<section class="panel color1-alt" id="experience-3">
+				<div class="intro color1">
+					<h3 class="major">Turtle Holdings Ltd.</h3>
+					<small>2020 || Private Equity Summer Analyst</small>
+					<br/>
+					<p>[description]</p>
+				</div>
+			</section>
+			<!-- Experience 4 -->
+			<section class="panel color1-alt" id="experience-4">
+				<div class="intro color1">
+					<h3 class="major">Rational Capital Investment Fund</h3>
+					<small>Present || VP Operations</small>
+					<br/>
+					<p>RCIF is U of T’s student-run investment fund. The fund manages and deploys private investor capital in the financial markets and runs a variety of programs that educate students on investing, connect members with industry professionals.</p>
+				</div>
+			</section>
+			<!-- Experience 5 -->
+			<section class="panel color1-alt" id="experience-5">
+				<div class="intro color1">
+					<h3 class="major">Royal Pacific Realty Corp.</h3>
+					<small>2019 || Real Estate Summer Intern</small>
+					<br/>
+					<p>I worked with a realtor in the Vancouver residential market. I assisted in creating listings, giving property tours, formulating contracts, coordinating work orders, and calculating commissions.</p>
+			</section>
+		</section> <!-- End experience panel -->
+		<!-- Panel - investing -->
+		<section class="panel color4 spotlight medium left" id="investing">
+			<div class="intro span-5">
+				<h2 class="major">Investing</h2>
+				<p>I am passionate about investing. I make investments based on fundamental factors following the Graham/Buffet/Munger value-investing approach. I believe in making well-researched investments in companies trading at a discount to intrinsic value with a margin of safety.</p>
+			</div>
+			<div class="inner" style="padding-top: 7em;">
+				<p>This letter contains investment ideas I’m working on. If you are interested in discussing any of these ideas, please reach out via email.</p>
+				<ul class="actions">
+					<li><a href="resources/Q32021AidanPercyLetter.pdf" class="button color2 icon fa-file-pdf" download>Q3 2021</a></li>
+				</ul>
+			</div>
+		</section>
+
+			<!-- Hobby Panel -->
+			<section class="panel color3 spotlight small left" id="hobbies">
+				<div class="intro joined">
+					<h2 class="major">Hobbies</h2>
+					<ul class="grid-icons two connected">
 						<li>
-							<a href="#project-1"><span class="icon solid fas fa-laptop-medical">
+							<a href="#hobby-1"><span class="icon solid fas fa-plane">
 								</span></a>
 						</li>
 						<li>
-							<a href="#project-2"><span class="icon solid fa-tasks">
+							<a href="#hobby-2"><span class="icon solid fa-water">
 								</span></a>
 						</li>
 						<li>
-							<a href="#project-3"><span class="icon solid fa-gavel">
+							<a href="#hobby-3"><span class="icon solid fa-medal">
 								</span></a>
 						</li>
 						<li>
-							<a href="#project-4"><span class="icon solid fa-language">
-								</span></a>
-						</li>
-						<li>
-							<a href="#project-5"><span class="icon solid fa-robot">
-								</span></a>
-						</li>
-						<li>
-							<a href="#project-6"><span class="icon solid fa-terminal">
+							<a href="#hobby-4"><span class="icon solid fa-campground">
 								</span></a>
 						</li>
 					</ul>
 				</div>
 			</section>
-
-			<!-- Project 1 -->
-			<section class="panel color1-alt" id="project-1">
-				<div class="intro color1">
-					<h2 class="major">Racoon</h2>
-					<p><a href="https://racoon.digital/">COVID-19 map and symptom checker</a></p>
-					<p>React.js, Redux, Google Maps  API, Infermedica, Rails, CSS/HTML</p>
+			<!-- Hobby 1 -->
+			<section class="panel color0" id="hobby-1">
+				<div class="intro span-7">
+					<h3 class="major">Traveling</h3>
+					<p>Travelling is one of my favorite things to do! I enjoy learning about a different culture, trying local cuisine, and exploring. Prior to the Covid-related travel restrictions, I visited different places every year. After graduating high school I toured through Hong Kong, Macau, Seoul, Tokyo, Fuji, Kyoto, and Osaka. The past two summers I’ve been fortunate enough to road trip through Western Canada including Whistler, Jasper, Banff, Lake Louise, and Calgary with my family. One of my favorite activities is exploring a new place by hiking or cycling. In the past few years, I’ve also traveled through the east and west coast of America. One of my favorite trips was driving from L.A. to San Francisco on the Pacific Coast Highway with my father. I can’t wait for travel restrictions to lift once the pandemic is contained. I’m planning on visiting Eastern Europe and South America.</p>
+				</div>
+				<div class="gallery">
+					<div class="group span-3">
+						<a href="resources/jasper.jpg" class="image filtered span-3" data-position="bottom"><img src="resources/jasper.jpg" alt="" /></a>
+						<a href="resources/banff.jpg" class="image filtered span-1-5" data-position="center"><img src="resources/banff.jpg" alt="" /></a>
+						<a href="resources/dmz.jpg" class="image filtered span-1-5" data-position="bottom"><img src="resources/dmz.jpg" alt="" /></a>
+					</div>
+					<a href="resources/kyoto.jpg" class="image filtered span-2-5" data-position="top"><img src="resources/kyoto.jpg" alt="" /></a>
+					<div class="group span-4-5">
+						<a href="resources/macau.jpg" class="image filtered span-3" data-position="top"><img src="resources/macau.jpg" alt="" /></a>
+						<a href="resources/hk.jpg" class="image filtered span-1-5" data-position="center"><img src="resources/hk.jpg" alt="" /></a>
+						<a href="resources/phili.jpg" class="image filtered span-1-5" data-position="bottom"><img src="resources/phili.jpg" alt="" /></a>
+						<a href="resources/newyork.jpg" class="image filtered span-3" data-position="top"><img src="resources/newyork.jpg" alt="" /></a>
+					</div>
 				</div>
 			</section>
-			<!-- Project 2 -->
-			<section class="panel color1-alt" id="project-2">
+			<!-- Hobby 2 -->
+			<section class="panel color1-alt" id="hobby-2">
 				<div class="intro color1">
-					<h2 class="major">Subscription Manager</h2>
-					<p>Track and budget subcriptions to paid services and free trials</p>
-					<p>React, Rails, Semantic UI</p>
+					<h3 class="major">Rowing</h3>
 				</div>
 			</section>
-			<!-- Project 3 -->
-			<section class="panel color1-alt" id="project-3">
+			<!-- Hobby 3 -->
+			<section class="panel color1-alt" id="hobby-3">
 				<div class="intro color1">
-					<h2 class="major">Whack-a-Corona</h2>
-					<p>Whack-a-Mole style SPA game with virus images</p>
-					<p>Javascript, CSS/HTML</p>
+					<h3 class="major">World Record</h3>
 				</div>
 			</section>
-			<!-- Project 4 -->
-			<section class="panel color1-alt" id="project-4">
+			<!-- Hobby 4 -->
+			<section class="panel color1-alt" id="hobby-4">
 				<div class="intro color1">
-					<h2 class="major">Talkr</h2>
-					<p>Chat application that auto-detects and translates all messages to user's preferred language</p>
-					<p>Rails, BCrypt, Google Cloud Translation, Bootstrap</p>
-				</div>
-			</section>
-			<!-- Project 5 -->
-			<section class="panel color1-alt" id="project-5">
-				<div class="intro color1">
-					<h2 class="major">Chatbot</h2>
-					<p>Simple chatbot - an exercise in Javascript fundamentals</p>
-					<p>Javascript, HTML, CSS</p>
-			</section>
-			<!-- Project 6 -->
-			<section class="panel color1-alt" id="project-6">
-				<div class="intro color1">
-					<h2 class="major">CLI Symptom Checker</h2>
-					<p>Ruby, Infermedica Symptom Checking API, gem rest-client</p>
-			</section>
-		</section> <!-- End projects panel -->
-
-			<!-- Contact Panel -->
-			<section class="panel color3 small left" id="contact">
-				<div class="intro">
-					<h2 class="major">Contact</h2>
-					<ul class="contact-icons color2">
-						<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/sylvia-pap/">LinkedIn</a></li>
-						<li class="icon brands fa-github"><a href="https://github.com/sylviapap">GitHub</a></li>
-						<li class="icon brands fa-twitter"><a href="https://twitter.com/sylviapapdev">Twitter</a></li>
-						<li class="icon brands fa-google"><a href="mailto:sylviapap1@gmail.com">Gmail</a></li>
-					</ul>
-
+					<h3 class="major">Discover 10</h3>
+					<p>When I was in grade 10 I was fortunate enough to be a part of an outdoor education program my school offered called Discovery 10. Discovery mirrored aspects of Outward Bound and focused on self-learning, exploration, and interpersonal skills. Over the course of the school year, the cohort of students completed outdoor expeditions ranging from hiking to kayaking to skiing across B.C. We also learned about history by visiting sites of former residential schools and former industrial land.
+					</p>
 				</div>
 			</section>
 
@@ -201,7 +260,7 @@
 			</section>
 
 			<div class="copyright">
-				&copy; Sylvia Pap | Design: <a href="https://html5up.net">HTML5 UP</a>
+				&copy; Aidan Percy | Design: <a href="https://html5up.net">HTML5 UP</a>
 			</div>
 		</div>
 	</div>
